--- a/package.json
+++ b/package.json
@@ -1,19 +1,29 @@
 {
   "name": "secure-qr-generator",
+  "private": true,
   "version": "1.0.0",
+  "type": "module",
   "description": "A secure web application for converting text to QR codes with AES-256 encryption capabilities",
-  "main": "index.html",
   "scripts": {
-    "start": "python3 -m http.server 8000",
-    "serve": "python3 -m http.server 8000",
-    "test": "open test.html"
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint:fix": "eslint . --ext ts,tsx --fix",
+    "preview": "vite preview",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "format": "prettier --write \"src/**/*.{ts,tsx,css}\"",
+    "format:check": "prettier --check \"src/**/*.{ts,tsx,css}\""
   },
   "keywords": [
     "qr-code",
     "encryption",
     "aes-256",
     "security",
-    "javascript",
+    "react",
+    "typescript",
+    "vite",
     "web-app"
   ],
   "author": "Abraham A. Agung",
@@ -26,8 +36,34 @@
   "bugs": {
     "url": "https://github.com/padunk/sequre/issues"
   },
+  "dependencies": {
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^6.26.0",
+    "qrious": "^4.0.2",
+    "crypto-js": "^4.2.0",
+    "jsqr": "^1.4.0"
+  },
   "devDependencies": {
-    "http-server": "^14.1.1"
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
+    "@types/crypto-js": "^4.2.2",
+    "@types/jest": "^29.5.12",
+    "@typescript-eslint/eslint-plugin": "^7.15.0",
+    "@typescript-eslint/parser": "^7.15.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-refresh": "^0.4.7",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "@testing-library/react": "^16.0.0",
+    "@testing-library/jest-dom": "^6.4.6",
+    "@testing-library/user-event": "^14.5.2",
+    "prettier": "^3.3.2",
+    "typescript": "^5.2.2",
+    "vite": "^6.0.0",
+    "vite-plugin-pwa": "^0.21.0"
   },
   "browserslist": [
     "> 1%",
